Remove comments and typo.